--- a/tmux.conf
+++ b/tmux.conf
@@ -185,10 +185,8 @@ set -g mouse off
 
 set -g status-bg '#4e4e4e'
 set -g status-fg '#bbbbbb'
-set -g status-left-fg '#bbbbbb'
-set -g status-left-bg '#4e4e4e'
-set -g status-right-fg '#bbbbbb'
-set -g status-right-bg '#4e4e4e'
+set -g status-left-style fg='#bbbbbb',bg='#4e4e4e'
+set -g status-right-style fg='#bbbbbb',bg='#4e4e4e'
 
 set -g status-left-length 90
 set -g status-right-length 60
@@ -215,8 +213,8 @@ set -g status-right '#[fg=green][#[fg=white]%m-%d %H:%M#[fg=green]]'
 # -------------------------------- color begin --------------------------------
 
 # pane border colors
-set-option -g pane-active-border-fg '#55ff55'
-set-option -g pane-border-fg '#555555'
+set-option -g pane-active-border-style fg='#55ff55'
+set-option -g pane-border-style fg='#555555'
 # set -g pane-border-fg colour245
 # set -g pane-active-border-fg colour39
 
